--- a/About.html
+++ b/About.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  </html>
 <li><a href="index.html">The Home Page</a></li>
 
 <h3>Here is our phone number : +216 31 252 842</h3>
@@ -14,3 +24,4 @@
   laboriosam, recusandae doloremque aliquid deleniti est nostrum nisi possimus
   soluta commodi, fugiat quos aperiam, et vitae doloribus ut?
 </p>
+</body>
