--- a/Resume.html
+++ b/Resume.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  
+</html>
 <li><a href="index.html">The Home Page</a></li>
 <h2>Why do you have to choose us :</h2>
 <p>
@@ -8,4 +19,5 @@
 
 <h3>if you need more information about our services please click here :</h3>
 
-<button><a href="contact.html">Our contact</a></button>
+<button><a href="contact.html">Our contact</a></button>  
+</body>
