--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-  </head>
-  <body>
-    <!--This a comment-->
-    <center><h1>SMMA by KBK Agency</h1></center>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<!--This a comment-->
+<center><h1 id="title">SMMA by KBK Agency</h1> </center>
 
-    <nav>
-      <ul type="square">
+<nav>
+    <ul type="square">
         <li><a href="index.html">The Home Page</a></li>
-        <br />
+        <br>
         <li><a href="./Resume.html">The resume</a></li>
-        <br />
+        <br>
         <li><a href="./Work.html">Our Work</a></li>
-        <br />
+        <br>
         <li><a href="./contact.html">Contact us</a></li>
-        <br />
+        <br>
         <li><a href="./About.html">About us </a></li>
-      </ul>
-    </nav>
-
-    <h2>The agency that help all the entreprise</h2>
-
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-      necessitatibus animi quos molestias ipsam consequuntur, enim aut similique
-      impedit esse distinctio iusto perferendis dolorem voluptates quis
-      sapiente. Rerum, harum fuga!
-    </p>
-
-    <ul>
-      <li>More adds</li>
-      <li>More clients</li>
-      <li>More money</li>
     </ul>
-    <img
-      src="/img/avantage_smma.png"
-      alt="Les avantages du SMMA grâce à KBK Agency"
-      id="img"
-    />
+</nav>
 
+<center><h2 id="Second_Title">Agency that help all the entreprise</h2></center>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam necessitatibus animi quos molestias ipsam consequuntur, enim aut similique impedit esse distinctio iusto perferendis dolorem voluptates quis sapiente. Rerum, harum fuga!</p>
+
+<div id="Les_3">
+<ol>  
+<li>More adds</li>
+<li>More clients</li>
+<li>More money</li>
+</div>
+</ol>
+<img src="/img/avantage_smma.png" class="media" width="200" height="130" alt="Les avantages du SMMA grâce à KBK Agency"/>
+<br>
+<br>
+<br>
     <iframe
       width="560"
       height="315"
@@ -52,21 +48,22 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       referrerpolicy="strict-origin-when-cross-origin"
       allowfullscreen
+      class="media"
     ></iframe>
 
     <footer>
-      <h2>Contact-us for more information</h2>
+      <h2 class="SAME"></h2class>Contact-us for more information</h2>
       <form>
         <input placeholder="Name" />
         <input placeholder="E-mail" />
         <textarea placeholder="Your message here ..."></textarea>
         <button>Submit</button>
       </form>
-      <span> © from Haroun; 2024 </span>
+      <span id="Txt_bas"> © from Haroun; 2024  </span>
       <a href="http://www.twitter.fr"><i class="twitter"></i></a>
       <a href="www.facebook.fr"><i class="facebook"></i></a>
       <a href="www.instagram.fr"><i class="instagram"></i></a>
       <!--Don't Work yet!-->
     </footer>
-  </body>
+</body>
 </html>
