--- a/Work.html
+++ b/Work.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  </html>
 <center>
   <li><a href="index.html">The Home Page</a></li>
 </center>
@@ -12,3 +22,4 @@
   explicabo nostrum itaque dolor beatae atque illum reprehenderit tempora ea
   nihil laboriosam aliquid quidem omnis sunt, libero, odit culpa?
 </p>
+</body>
